--- a/Fruzzy/WebContent/WEB-INF/css/style.css
+++ b/Fruzzy/WebContent/WEB-INF/css/style.css
@@ -1,7 +1,7 @@
 body {
 	background: #333;
 	color: #fff;
-	margin: 5px;
+	margin: 0px 3.5%;
 	position: relative;
 }
 
@@ -10,19 +10,93 @@ body {
 	opacity: 0.8;
 }
 
-#user-cover {
-	background-size: cover;
-	background-attachment: scroll;
-	width: 100%;
-	height: 450px;
-	dispaly: inline_block;
-	overflow: hidden;
+.user-cover {
+	padding-bottom: 5px;
 }
 
-#user-cover>img{
-	width:100%;
-	height: 100%;
+/*#user-cover>img {
+  width: 100%;
+  height: 100%;
+}*/
+.profile-header-background {
+	margin: -30px -30px 0 -30px;
 }
+
+.profile-header-background img {
+	width: 100%;
+	height: 360px;
+}
+
+.profile-info-left {
+	position: relative;
+	top: -92px;
+}
+
+@media (max-width: 400px){
+	.profile-info-left {
+		 top: 70px;
+		 margin-bottom: 80px;
+	
+}
+}
+
+.profile-info-left img.avatar {
+	border: 2px solid #fff;
+}
+
+.profile-info-left h2 {
+	font-family: "josefinslab-semibold";
+	margin-top: 10px;
+	margin-bottom: 20px;
+}
+
+.profile-info-right .section {
+	margin-top: 22px;
+}
+
+.profile-info-left .section h3 {
+	font-size: 1.1em;
+	font-weight: 700;
+	border-bottom: 1px solid #ccc;
+	padding-bottom: 10px;
+}
+
+.profile-info-left .btn {
+	width: 100%;
+	margin-right: 10px;
+}
+
+.profile-info-left .fas {
+	padding-right: 6px;
+}
+
+.profile-info-right {
+	background: rgb(0, 0, 0, 0.4);
+	padding-left: 30px;
+	padding-right: 30px;
+	width: 100%;
+	height: auto;
+	margin-top: 8px;
+	border-radius: 10px;
+}
+
+.profile-info-right  .statistics-section p {
+	display: inline-block;
+	padding-right: 20px;
+}
+
+@media (min-width:400px) and (max-width:800px){
+	.profile-info-right{
+		margin-left: 12px;
+	}
+}
+/* 
+@media screen and (max-width: 768px) {
+	.profile-info-right {
+		position: relative;
+		top: -70px;
+	}
+} */
 
 #user-cover .dark-overlay {
 	background-color: rgba(0, 0, 0, 0.7);
@@ -30,7 +104,7 @@ body {
 	top: 0;
 	left: 0;
 	width: 100%;
-	min-height: 450px;
+	min-height: 350px;
 }
 
 #user-cover .home-inner {
@@ -38,11 +112,6 @@ body {
 }
 
 .profile-cover {
-	background:
-		url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTxa4DmoG6Gjxyr8lQ_3rqGVl_Tto0vyTXVuxH2K_0nZXjTyX9p")
-		no-repeat;background-size: contain;
-	background-position: center;
-	background-attachment: scroll;
 	min-height: 200px;
 	max-width: auto;
 }
@@ -53,61 +122,73 @@ body {
 
 #gallery {
 	display: grid;
-	height: calc(100vh - 10px);
+	height: calc(140vh - 10px);
 	grid-template: repeat(6, 1fr)/repeat(6, 1fr);
 	grid-gap: 0.5em;
+ 	margin-top: 10px; 
 }
 
 #mediaModal.modal-body {
-  position:relative;
-  padding:0px;
-  width: auto;
-  min-height: 400px;
-  background:#ccc;
-  display: inline-block;
+	position: relative;
+	padding: 0px;
+	width: auto;
+	min-height: 400px;
+	background: #ccc;
+	display: inline-block;
 }
 
 #media2Modal.modal-body {
-  position:relative;
-  padding:0px;
-  width: auto;
-  min-height: 400px;
-  background:#ccc;
-  display: inline-block;
+	position: relative;
+	padding: 0px;
+	width: auto;
+	min-height: 400px;
+	background: #ccc;
+	display: inline-block;
 }
 
 #media3Modal.modal-body {
-  position:relative;
-  padding:0px;
-  width: auto;
-  min-height: 400px;
-  background:#ccc;
-  display: inline-block;
+	position: relative;
+	padding: 0px;
+	width: auto;
+	min-height: 400px;
+	background: #ccc;
+	display: inline-block;
 }
 
-.modal-body img{
+.modal-body img {
 	width: 100%;
 	height: 100%;
 }
 
-
 .close {
-  position:absolute;
-  right:-30px;
-  top:0;
-  z-index:999;
-  font-size:2rem;
-  font-weight: normal;
-  color:#fff;
-  opacity:1;
+	position: absolute;
+	right: -30px;
+	top: 0;
+	z-index: 999;
+	font-size: 2rem;
+	font-weight: normal;
+	color: #fff;
+	opacity: 1;
+}
+
+#gallery .card-header {
+	color: black;
+	font-size: 16px;
+}
+
+.modal-header {
+	color: darkgray;
+	font-size: 16px;
+	align-self: flex-start;
+	align-items: center;
 }
 
 @media ( max-width : 800px) {
- 	#gallery {
+	#gallery {
 		display: flex;
- 		align-items: inherit;
- 		flex-wrap:wrap;
-	} 
+		align-items: inherit;
+		flex-wrap: wrap;
+	}
 	#gallery>div {
 		display: inline-block;
 		width: 48%;
@@ -126,7 +207,7 @@ body {
 	}
 }
 
-@media ( max-width : 800px) and (max-width: 350px){
+@media ( max-width : 800px) and (max-width: 350px) {
 	#gallery>div {
 		width: 98%;
 	}
@@ -147,6 +228,11 @@ body {
 	grid-row: span 2;
 }
 
+#gallery .card-title {
+	text-align: left;
+	color: red;
+}
+
 #gallery>div>a {
 	opacity: 0;
 	position: absolute;
@@ -162,13 +248,13 @@ body {
 	transition: all ease 1s;
 }
 
-#gallery>div>img {
+#gallery>div>.card-img-top {
 	width: 100%;
 	height: 100%;
 	transition: all ease 1s;
 }
 
-#gallery>div:hover img {
+#gallery>div:hover .card-img-top {
 	filter: blur(4px);
 }
 
@@ -183,11 +269,42 @@ body {
 		rgba(0, 0, 0, 0.19);
 }
 
-#gallery div, #gallery a {
+#gallery>div, #gallery a {
 	display: flex;
 	justify-content: center;
-	align-items: center;
+	/* 	align-items: center;
+ */
 	text-decoration: none;
+}
+
+.image-caption-container {
+	color: green;
+}
+
+.card-footer {
+	text-align: right;
+}
+
+.modal-footer {
+	text-align: right;
+	margin-top: -14px;
+}
+
+.modal .modal-caption-1 {
+	margin-top: 20px;
+	text-align: left;
+	color: red;
+}
+
+.modal .modal-caption-2 {
+	text-align: left;
+	color: green;
+}
+
+.far {
+	padding: 1px 5px;
+	color: darkgrey;
+	font-size: large;
 }
 
 [id^="lightbox-"] {
